[gd_scene load_steps=28 format=3 uid="uid://cihk1myiwivd"]

[ext_resource type="Script" uid="uid://m45730kmnwqk" path="res://Scripts/main_scene.gd" id="1_550oq"]
[ext_resource type="Texture2D" uid="uid://bo1gipftlyn1k" path="res://Sprites/Sprite-0001.png" id="2_askvq"]
[ext_resource type="PackedScene" uid="uid://b46aj0x4hxsbs" path="res://Scenes/information.tscn" id="3_5bov3"]
[ext_resource type="Texture2D" uid="uid://by72in0b417ic" path="res://Sprites/Sprite-discett.png" id="3_bg7hr"]
[ext_resource type="Texture2D" uid="uid://bnbalthj2v8r4" path="res://Sprites/animations/Sprite-discett-animatioc2.png" id="4_6eci5"]
[ext_resource type="PackedScene" uid="uid://bwxtmfml4hhc6" path="res://Scenes/statistics.tscn" id="4_xle81"]
[ext_resource type="Texture2D" uid="uid://bhi2slkgedd6j" path="res://Sprites/animations/Sprite-discett-animatioc3.png" id="5_cy0cn"]
[ext_resource type="PackedScene" uid="uid://df1dbu0a5ngst" path="res://Scenes/settings.tscn" id="5_s8qe6"]
[ext_resource type="Texture2D" uid="uid://7ep1w7us4ro5" path="res://Sprites/animations/Sprite-discett-animatioc4.png" id="6_bv1qq"]
[ext_resource type="Texture2D" uid="uid://e5h3ldja73fl" path="res://Sprites/animations/Sprite-discett-animatioc5.png" id="7_65wan"]
[ext_resource type="Texture2D" uid="uid://b0ftkom4jsybr" path="res://Sprites/animations/Sprite-discett-animatioc6.png" id="8_c1a7b"]
[ext_resource type="Texture2D" uid="uid://daebaj4q6wofp" path="res://Sprites/animations/Sprite-discett-animatioc7.png" id="9_jq1vq"]
[ext_resource type="Texture2D" uid="uid://pc7r3785qp1c" path="res://Sprites/animations/Sprite-discett-animatioc8.png" id="10_4sh54"]
[ext_resource type="Texture2D" uid="uid://ca2rdn1y2twq2" path="res://Sprites/animations/Sprite-discett-animatioc9.png" id="11_x6o25"]
[ext_resource type="Texture2D" uid="uid://ubdgs7ddviwf" path="res://Sprites/animations/Sprite-discett-animatioc10.png" id="12_73fde"]
[ext_resource type="Texture2D" uid="uid://cf7bd0wu5yjuy" path="res://Sprites/animations/Sprite-discett-animatioc11.png" id="13_godr1"]
[ext_resource type="Texture2D" uid="uid://vei6vljkwoap" path="res://Sprites/animations/Sprite-discett-animatioc12.png" id="14_x30i8"]
[ext_resource type="Texture2D" uid="uid://ccamkq4fr5153" path="res://Sprites/animations/Sprite-discett-animatioc13.png" id="15_14ge8"]
[ext_resource type="Texture2D" uid="uid://b35nucbryt66" path="res://Sprites/animations/Sprite-discett-animatioc14.png" id="16_3svau"]
[ext_resource type="Texture2D" uid="uid://dknax8c2qsguq" path="res://Sprites/animations/Sprite-discett-animatioc15.png" id="17_4m508"]
[ext_resource type="Texture2D" uid="uid://dbedy2ou86lh8" path="res://Sprites/animations/Sprite-discett-animatioc16.png" id="18_r0bao"]
[ext_resource type="Texture2D" uid="uid://do3ppcrkeds4v" path="res://Sprites/animations/Sprite-discett-animatioc17.png" id="19_b2mu1"]
[ext_resource type="Texture2D" uid="uid://csw4x1nmsmeqs" path="res://Sprites/animations/Sprite-discett-animatioc18.png" id="20_hb61g"]
[ext_resource type="Texture2D" uid="uid://gol14ogwgeh5" path="res://Sprites/animations/Sprite-discett-animatioc19.png" id="21_1223j"]
[ext_resource type="Texture2D" uid="uid://2o63a7s4gy77" path="res://Sprites/animations/Sprite-discett-animatioc20.png" id="22_wmf2y"]
[ext_resource type="Texture2D" uid="uid://heuelm1c8fx2" path="res://Sprites/animations/Sprite-discett-animatioc21.png" id="23_k3ioo"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yhdb0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bg7hr")
}],
"loop": true,
"name": &"discett_save_png",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6eci5")
}, {
"duration": 1.0,
"texture": ExtResource("5_cy0cn")
}, {
"duration": 1.0,
"texture": ExtResource("6_bv1qq")
}, {
"duration": 1.0,
"texture": ExtResource("7_65wan")
}, {
"duration": 1.0,
"texture": ExtResource("8_c1a7b")
}, {
"duration": 1.0,
"texture": ExtResource("9_jq1vq")
}, {
"duration": 1.0,
"texture": ExtResource("10_4sh54")
}, {
"duration": 1.0,
"texture": ExtResource("11_x6o25")
}, {
"duration": 1.0,
"texture": ExtResource("12_73fde")
}, {
"duration": 1.0,
"texture": ExtResource("13_godr1")
}, {
"duration": 1.0,
"texture": ExtResource("14_x30i8")
}, {
"duration": 1.0,
"texture": ExtResource("15_14ge8")
}, {
"duration": 1.0,
"texture": ExtResource("16_3svau")
}, {
"duration": 1.0,
"texture": ExtResource("17_4m508")
}, {
"duration": 1.0,
"texture": ExtResource("18_r0bao")
}, {
"duration": 1.0,
"texture": ExtResource("19_b2mu1")
}, {
"duration": 1.0,
"texture": ExtResource("20_hb61g")
}, {
"duration": 1.0,
"texture": ExtResource("21_1223j")
}, {
"duration": 1.0,
"texture": ExtResource("22_wmf2y")
}, {
"duration": 1.0,
"texture": ExtResource("23_k3ioo")
}],
"loop": true,
"name": &"discett_wipe_animation",
"speed": 10.0
}]

[node name="main_scene" type="Node2D"]
script = ExtResource("1_550oq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 3.0
offset_right = 1919.0
offset_bottom = 1081.0
size_flags_horizontal = 4
metadata/_edit_lock_ = true

[node name="fish_click" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.5
offset_top = -202.0
offset_right = 200.5
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(234.5, 190)
texture_normal = ExtResource("2_askvq")
stretch_mode = 5

[node name="Control2" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 713.0
offset_top = 284.0
offset_right = 753.0
offset_bottom = 324.0

[node name="text" type="Label" parent="Control/Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.0
offset_top = -223.0
offset_right = 461.0
offset_bottom = -14.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "Scales:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="money" type="Label" parent="Control/Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_top = -40.0
offset_right = 451.0
offset_bottom = 97.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1

[node name="mps" type="Label" parent="Control/Control2"]
layout_mode = 0
offset_left = -144.0
offset_top = 430.0
offset_right = 561.0
offset_bottom = 529.0
theme_override_font_sizes/font_size = 72
text = "SPS: "
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="tabs_for_buildings_upgrades" type="TabContainer" parent="Control"]
layout_mode = 0
offset_left = 1275.0
offset_top = 228.0
offset_right = 1918.0
offset_bottom = 1078.0
current_tab = 0

[node name="Buildings" type="ScrollContainer" parent="Control/tabs_for_buildings_upgrades"]
clip_children = 1
layout_mode = 2
scroll_vertical_custom_step = 10.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
metadata/_edit_use_anchors_ = true
metadata/_tab_index = 0

[node name="Control" type="VBoxContainer" parent="Control/tabs_for_buildings_upgrades/Buildings"]
custom_minimum_size = Vector2(635, 0)
layout_mode = 2

[node name="Upgrades" type="GridContainer" parent="Control/tabs_for_buildings_upgrades"]
visible = false
layout_mode = 2
columns = 5
metadata/_tab_index = 1

[node name="tabs_for_option_stats_info" type="TabContainer" parent="Control"]
layout_mode = 0
offset_top = -2.0
offset_right = 565.0
offset_bottom = 1077.0
theme_override_font_sizes/font_size = 30
current_tab = 0

[node name="information" parent="Control/tabs_for_option_stats_info" instance=ExtResource("3_5bov3")]
layout_mode = 2

[node name="statistics" parent="Control/tabs_for_option_stats_info" instance=ExtResource("4_xle81")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Settings" parent="Control/tabs_for_option_stats_info" instance=ExtResource("5_s8qe6")]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="save_icon" type="AnimatedSprite2D" parent="Control"]
visible = false
position = Vector2(133, 950)
sprite_frames = SubResource("SpriteFrames_yhdb0")
animation = &"discett_wipe_animation"

[node name="save_icon_timer" type="Timer" parent="Control/save_icon"]
wait_time = 1.2
one_shot = true

[node name="buildings_choice" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1277.0
offset_top = 124.0
offset_right = 1592.0
offset_bottom = 204.0
theme_override_font_sizes/font_size = 50
text = "buildings"

[node name="upgrades_choice" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1605.0
offset_top = 124.0
offset_right = 1920.0
offset_bottom = 204.0
theme_override_font_sizes/font_size = 50
text = "upgrades"

[node name="shop_text" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1280.0
offset_right = 1918.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 70
text = "Shop:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="music_player" type="AudioStreamPlayer" parent="."]

[node name="sfx_player" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Control/fish_click" to="." method="_on_fish_click_pressed"]
[connection signal="timeout" from="Control/save_icon/save_icon_timer" to="." method="disable_save_icon"]
[connection signal="pressed" from="Control/buildings_choice" to="." method="_on_buildings_choice_pressed"]
[connection signal="pressed" from="Control/upgrades_choice" to="." method="_on_upgrades_choice_pressed"]
